// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Features /> spec renders the component with no given features 1`] = `
<div>
  <div
    class="euiPanel euiPanel--paddingMedium"
    style="padding: 20px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--small"
        >
          Features
        </h3>
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiText euiText--medium content-panel-subTitle"
            >
              Specify an index field that you want to find anomalies for by defining features. You can add up to 5 features.
               
              <a
                class="euiLink euiLink--primary"
                href="https://opendistro.github.io/for-elasticsearch-docs/docs/ad/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Learn more 
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small euiIcon-isLoading"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: 10px 0px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        style="margin: 0px;"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          style="padding: 12px 0px;"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              class="euiButton euiButton--primary"
              data-test-subj="addFeature"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Add another feature
                </span>
              </span>
            </button>
            <div
              class="euiText euiText--medium content-panel-subTitle"
            >
              <p>
                You can add up to
                 
                5
                 
                more features.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Features /> spec renders the component with one feature 1`] = `
<div>
  <div
    class="euiPanel euiPanel--paddingMedium"
    style="padding: 20px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--small"
        >
          Features
        </h3>
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiText euiText--medium content-panel-subTitle"
            >
              Specify an index field that you want to find anomalies for by defining features. You can add up to 5 features.
               
              <a
                class="euiLink euiLink--primary"
                href="https://opendistro.github.io/for-elasticsearch-docs/docs/ad/"
                rel="noopener noreferrer"
                target="_blank"
              >
                Learn more 
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          />
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginXSmall"
    />
    <div
      style="padding: 10px 0px;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
        style="margin: 0px;"
      >
        <div
          class="euiAccordion euiAccordion__noTopBorder"
        >
          <div
            class="euiAccordion__triggerWrapper"
          >
            <button
              aria-controls="featureList.0"
              aria-expanded="false"
              class="euiAccordion__button euiAccordionForm__noTopPaddingButton"
              id="random_html_id"
              type="button"
            >
              <span
                class="euiAccordion__iconWrapper"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon-isLoading euiAccordion__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </span>
              <span
                class="euiIEFlexWrapFix"
              >
                <div
                  id="featureAccordionHeaders.0"
                >
                  <div
                    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                  >
                    <div
                      class="euiFlexItem"
                    >
                      <h5
                        class="euiTitle euiTitle--xsmall euiAccordionForm__title"
                      >
                        test-feature
                      </h5>
                    </div>
                  </div>
                  <span
                    class="content-panel-subTitle"
                    style="padding-right: 20px;"
                  >
                    Field: 
                  </span>
                  <span
                    class="content-panel-subTitle"
                    style="padding-right: 20px;"
                  >
                    Aggregation method: 
                    sum
                  </span>
                  <span
                    class="content-panel-subTitle"
                  >
                    State: 
                    Disabled
                  </span>
                </div>
              </span>
            </button>
            <div
              class="euiAccordion__optionalAction"
            >
              <button
                class="euiButton euiButton--danger euiButton--small"
                type="button"
              >
                <span
                  class="euiButtonContent euiButton__content"
                >
                  <span
                    class="euiButton__text"
                  >
                    Delete
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="euiAccordion__childWrapper"
            id="featureList.0"
          >
            <div>
              <div
                class="euiAccordion__padding--l"
              >
                <div
                  class="euiFormRow"
                  id="random_html_id-row"
                >
                  <div
                    class="euiFormRow__labelWrapper"
                  >
                    <label
                      aria-invalid="false"
                      class="euiFormLabel euiFormRow__label"
                      for="random_html_id"
                    >
                      Feature name
                    </label>
                  </div>
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiFormControlLayout"
                    >
                      <div
                        class="euiFormControlLayout__childrenWrapper"
                      >
                        <input
                          aria-describedby="random_html_id-help"
                          class="euiFieldText"
                          id="random_html_id"
                          name="featureList.0.featureName"
                          placeholder="Enter feature name"
                          type="text"
                          value="test-feature"
                        />
                      </div>
                    </div>
                    <div
                      class="euiFormHelpText euiFormRow__text"
                      id="random_html_id-help"
                    >
                      Enter a descriptive name. The name must be unique within this detector. Feature name must contain 1-64 characters. Valid characters are a-z, A-Z, 0-9, -(hyphen) and _(underscore).
                    </div>
                  </div>
                </div>
                <div
                  class="euiFormRow"
                  id="random_html_id-row"
                >
                  <div
                    class="euiFormRow__labelWrapper"
                  >
                    <label
                      aria-invalid="false"
                      class="euiFormLabel euiFormRow__label"
                      for="random_html_id"
                    >
                      Feature state
                    </label>
                  </div>
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiCheckbox"
                    >
                      <input
                        class="euiCheckbox__input"
                        id="random_html_id"
                        name="featureList.0.featureEnabled"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="euiCheckbox__square"
                      />
                      <label
                        class="euiCheckbox__label"
                        for="random_html_id"
                      >
                        Enable feature
                      </label>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFormRow"
                  id="random_html_id-row"
                >
                  <div
                    class="euiFormRow__labelWrapper"
                  >
                    <label
                      aria-invalid="false"
                      class="euiFormLabel euiFormRow__label"
                      for="random_html_id"
                    >
                      Find anomalies based on
                    </label>
                  </div>
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiFormControlLayout"
                    >
                      <div
                        class="euiFormControlLayout__childrenWrapper"
                      >
                        <select
                          class="euiSelect"
                          id="random_html_id"
                          name="featureList.0.featureType"
                        >
                          <option
                            value="simple_aggs"
                          >
                            Field value
                          </option>
                          <option
                            value="custom_aggs"
                          >
                            Custom expression
                          </option>
                        </select>
                        <div
                          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                        >
                          <span
                            class="euiFormControlLayoutCustomIcon"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFormRow"
                  id="random_html_id-row"
                >
                  <div
                    class="euiFormRow__labelWrapper"
                  >
                    <label
                      aria-invalid="false"
                      class="euiFormLabel euiFormRow__label"
                      for="random_html_id"
                    >
                      Aggregation method
                    </label>
                  </div>
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      class="euiFormControlLayout"
                    >
                      <div
                        class="euiFormControlLayout__childrenWrapper"
                      >
                        <select
                          aria-describedby="random_html_id-help"
                          class="euiSelect"
                          data-test-subj="aggregationType"
                          id="random_html_id"
                          name="featureList.0.aggregationBy"
                        >
                          <option
                            value="avg"
                          >
                            average()
                          </option>
                          <option
                            value="value_count"
                          >
                            count()
                          </option>
                          <option
                            value="sum"
                          >
                            sum()
                          </option>
                          <option
                            value="min"
                          >
                            min()
                          </option>
                          <option
                            value="max"
                          >
                            max()
                          </option>
                        </select>
                        <div
                          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                        >
                          <span
                            class="euiFormControlLayoutCustomIcon"
                          >
                            <svg
                              aria-hidden="true"
                              class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              height="16"
                              role="img"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="euiFormHelpText euiFormRow__text"
                      id="random_html_id-help"
                    >
                      The aggregation method determines what constitutes an anomaly. For example, if you choose min(), the detector focuses on finding anomalies based on the minimum values of your feature.
                    </div>
                  </div>
                </div>
                <div
                  class="euiFormRow"
                  id="random_html_id-row"
                >
                  <div
                    class="euiFormRow__labelWrapper"
                  >
                    <label
                      aria-invalid="false"
                      class="euiFormLabel euiFormRow__label"
                      for="random_html_id"
                    >
                      Field
                    </label>
                  </div>
                  <div
                    class="euiFormRow__fieldWrapper"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="euiComboBox"
                      name="featureList.0.aggregationOf"
                      role="combobox"
                    >
                      <div
                        class="euiFormControlLayout"
                      >
                        <div
                          class="euiFormControlLayout__childrenWrapper"
                        >
                          <div
                            class="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                            data-test-subj="comboBoxInput"
                            tabindex="-1"
                          >
                            <p
                              class="euiComboBoxPlaceholder"
                            >
                              Select field
                            </p>
                            <div
                              class="euiComboBox__input"
                              style="font-size: 14px; display: inline-block;"
                            >
                              <input
                                aria-controls=""
                                data-test-subj="comboBoxSearchInput"
                                id="random_html_id"
                                role="textbox"
                                style="box-sizing: content-box; width: 2px;"
                                value=""
                              />
                              <div
                                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                              />
                            </div>
                          </div>
                          <div
                            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                          >
                            <button
                              aria-label="Open list of options"
                              class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                              data-test-subj="comboBoxToggleListButton"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height="16"
                                role="img"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
          style="padding: 12px 0px;"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <button
              class="euiButton euiButton--primary"
              data-test-subj="addFeature"
              type="button"
            >
              <span
                class="euiButtonContent euiButton__content"
              >
                <span
                  class="euiButton__text"
                >
                  Add another feature
                </span>
              </span>
            </button>
            <div
              class="euiText euiText--medium content-panel-subTitle"
            >
              <p>
                You can add up to
                 
                4
                 
                more features.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
